fix alignment issue

--- a/web/style.css
+++ b/web/style.css
@@ -98,6 +98,12 @@ p {
   margin-bottom: 0.5em;
 }
 
+.center {
+  text-align: center;
+  margin-top: 0px;
+  margin-bottom: 0.5em;
+}
+
 .similar {
   margin-top: 0.5em;
   margin-bottom: 0.5em;
